# IR-Project-RAG

./: .env_example  .gitignore  README.md  main.py  pyproject.toml  rag-notebook.ipynb  requirements.txt  streamlit_app.py  vector.py  vector2.py
data/: Sample_internet_bill.docx  activities.txt
data/csv/: bike_safety.csv
data/pdf/: machine_learning.txt
data/text_files/: machine_learning.txt  python_intro.txt
faiss_index/: index.faiss  index.pkl
faiss_llama_db/: index.faiss  index.pkl
faiss_vectorstore/: index.faiss  index.pkl
src/doc_ingestion/: doc_processor.py
src/graph_builder/: graph_builder.py
src/node/: nodes.py  reactnode.py
src/state/: rag_state.py
